--- a/CalumAndGaleTests/CalumGaleTests.csproj
+++ b/CalumAndGaleTests/CalumGaleTests.csproj
@@ -7,10 +7,12 @@
     <ProjectGuid>{78D5BDBA-37C2-4FE3-8C1A-74C3D5001A07}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CalumAndGaleTests</RootNamespace>
-    <AssemblyName>CalumAndGaleTests</AssemblyName>
+    <RootNamespace>CalumGaleTests</RootNamespace>
+    <AssemblyName>CalumGaleTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,6 +36,7 @@
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
@@ -44,18 +47,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HomeControllerTextFixture.cs" />
+    <Compile Include="ModelTestFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CalumAndGale\CalumAndGale.csproj">
+    <ProjectReference Include="..\CalumAndGale\CalumGaleWeb.csproj">
       <Project>{bcb0674f-4870-488a-b897-4ff488f9634d}</Project>
-      <Name>CalumAndGale</Name>
+      <Name>CalumGaleWeb</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
