Fixed up Gayle's name

--- a/CalumAndGale/CalumGayleWeb.csproj
+++ b/CalumAndGale/CalumGayleWeb.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{E3E379DF-F4C6-4180-9B81-6769533ABE47};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CalumGaleWeb</RootNamespace>
-    <AssemblyName>CalumGaleWeb</AssemblyName>
+    <RootNamespace>CalumGayleWeb</RootNamespace>
+    <AssemblyName>CalumGayleWeb</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -137,7 +137,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\CalumandGale.jpe" />
+    <Content Include="Content\CalumGayle.jpe" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -224,8 +224,8 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\CalumGale\Index.cshtml" />
-    <Content Include="Views\CalumGale\Submitted.cshtml" />
+    <Content Include="Views\CalumGayle\Index.cshtml" />
+    <Content Include="Views\CalumGayle\Submitted.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
