--- a/CalumAndGaleTests/CalumGayleTests.csproj
+++ b/CalumAndGaleTests/CalumGayleTests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{78D5BDBA-37C2-4FE3-8C1A-74C3D5001A07}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CalumGaleTests</RootNamespace>
-    <AssemblyName>CalumGaleTests</AssemblyName>
+    <RootNamespace>CalumGayleTests</RootNamespace>
+    <AssemblyName>CalumGayleTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -54,9 +54,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CalumAndGale\CalumGaleWeb.csproj">
+    <ProjectReference Include="..\CalumAndGale\CalumGayleWeb.csproj">
       <Project>{bcb0674f-4870-488a-b897-4ff488f9634d}</Project>
-      <Name>CalumGaleWeb</Name>
+      <Name>CalumGayleWeb</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
