--- a/CalumAndGale/Web.config
+++ b/CalumAndGale/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="CalumGayleContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-CalumGayle-20130803134806;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-CalumGayle-20130803134806.mdf" providerName="System.Data.SqlClient" />
+    <add name="CalumGayleContext" connectionString="Data Source=BELFASE\SQLEXPRESS;Initial Catalog=CalumGayle;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
